# Breeks-desktop

./: .clang-format  CMakeLists.txt
src/: BreeksApp.pro  CMakeLists.txt  initializer.cpp  main.cpp
src/Back/: filesystem.h  secret-data.cpp  secret-data.h  server-connection.cpp  server-connection.h
src/Back/FileSystem/: databaseIO.cpp  filesystem.cpp
src/Back/utils/: utils.cpp
src/Front/: datastructures.h  effects.h  mainwindow.cpp  mainwindow.h
src/Front/Dictionary/: russiandictionary.cpp  russiandictionary.h
src/Front/GeneralTextEdit/: gentextedit-details.cpp  gentextedit-get-set.cpp  gentextedit-keys-realization.cpp  gentextedit-write-read.cpp  gentextedit.cpp  gentextedit.h  textnewelement.cpp  undoredotext.cpp  undoredotext.h
src/Front/GeneralTextEdit/TimeTable/: timetable-write-read.cpp  timetabletextedit.cpp  timetabletextedit.h
src/Front/MainElements/: addbuttonhover.cpp  addbuttonhover.h  breek.cpp  breek.h  calendarweek.cpp  calendarweek.h  daywidget.cpp  daywidget.h  demobreek.cpp  demobreek.h  descriptionzonedaybutton.cpp  descriptionzonedaybutton.h  elementtemplate.cpp  elementtemplate.h  imagehover.cpp  imagehover.h  infogb.cpp  infogb.h  timeedit.h
src/Front/MainElements/EmojiHub/: emojibutton.cpp  emojibutton.h  emojihub.cpp  emojihub.h
src/Front/Mainwindow-zones/: mainwidnow-timetable.cpp  mainwindow-addbreek.cpp  mainwindow-addelement.cpp  mainwindow-addtimetableelement.cpp  mainwindow-breekszone.cpp  mainwindow-image.cpp  mainwindow-infobuttons.cpp  mainwindow-note.cpp
src/Front/Qml/: qml_for_breeks.qml
